# naersk

./: .gitignore  README.md  README.tpl.md  build.nix  builtins.nix  config.nix  crate_specific.nix  default.nix  flake.nix  lib.nix  overlay.nix  readme.nix  test.nix
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: fast.yml  test.yml
builtins/: default.nix  to-toml.nix
docparse/: Cargo.toml  shell.nix
docparse/src/: main.rs
examples/checks/: flake.nix
examples/cross-windows/: Cargo.toml  flake.nix
examples/hello-world/: Cargo.toml  flake.nix
examples/multi-target/: Cargo.toml  flake.nix
examples/multiple-binaries/: Cargo.toml  README.md  flake.nix
examples/static-musl/: Cargo.toml  flake.nix
nix/: default.nix  sources.json  sources.nix
rust/: 1_41_0.nix  binary.nix  cargo.nix  clippy.nix  default.nix  libunwind.nix  rustc.nix  rustfmt.nix
rust/rls/: default.nix
script/: gen  test
test/: README.md  default.nix
test/binary/: Cargo.toml
test/cargo-wildcard/: Cargo.toml
test/dummyfication/: Cargo.toml
test/fast/: default.nix
test/fast/git-single-repository-with-multiple-crates/fixtures/app/: Cargo.toml
test/fast/git-single-repository-with-multiple-crates/fixtures/app/src/: main.rs
test/git-dep/: Cargo.toml
test/git-dep-by-branch/: Cargo.toml
test/git-dep-by-branch-with-slash/: README.md
test/git-dep-dup/: README.md
test/git-dep-with-submodule/: Cargo.toml
test/git-symlink/: README.md
test/simple-dep/: Cargo.toml
test/slow/: default.nix
test/workspace-build-rs/: Cargo.toml
(+97 files in other folders)
